--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "vue": "^1.0.26",
+    "vue-resource": "^0.9.3",
     "vue-router": "^0.7.13"
   },
   "devDependencies": {
