--- a/package.json
+++ b/package.json
@@ -2,11 +2,6 @@
   "name": "vue.js-starter-template",
   "version": "0.1.1",
   "description": "A starter for Vue.js-projects",
-  "scripts": {
-    "start": "webpack-dev-server --inline --progress --colors --history-api-fallback --config webpack/development.js",
-    "build": "webpack -p --config webpack/production.js",
-    "lint:js": "./node_modules/.bin/eslint src; exit 0;"
-  },
   "keywords": [
     "vue.js",
     "vue.js router"
@@ -16,6 +11,14 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:villeristi/vue.js-starter-template.git"
+  },
+  "config": {
+    "port": 3000
+  },
+  "scripts": {
+    "start": "webpack-dev-server --inline --progress --colors --history-api-fallback --config webpack/development.js",
+    "build": "webpack -p --config webpack/production.js",
+    "lint:js": "./node_modules/.bin/eslint src; exit 0;"
   },
   "dependencies": {
     "vue": "^1.0.26",
@@ -29,6 +32,8 @@
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-2": "^6.11.0",
+    "browser-sync": "^2.13.0",
+    "browser-sync-webpack-plugin": "^1.1.0",
     "css-loader": "^0.23.1",
     "eslint": "^3.0.1",
     "eslint-friendly-formatter": "^2.0.5",
