--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "lint:js": "./node_modules/.bin/eslint src; exit 0;"
   },
   "dependencies": {
+    "immutable": "^3.8.1",
+    "redux": "^3.6.0",
+    "revue": "^2.2.0",
     "vue": "^1.0.26",
     "vue-resource": "^0.9.3",
     "vue-router": "^0.7.13"
