--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "immutable": "^3.8.1",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
     "revue": "^2.2.0",
     "vue": "^1.0.26",
     "vue-resource": "^0.9.3",
