--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "lint:js": "./node_modules/.bin/eslint src; exit 0;"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0-alpha.5",
+    "font-awesome": "^4.7.0",
     "vue": "^2.0.5",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.0.1"
