--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lint:js": "./node_modules/.bin/eslint src; exit 0;"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-alpha.5",
+    "bootstrap": "4.0.0-alpha.6",
     "font-awesome": "^4.7.0",
     "vue": "^2.0.5",
     "vue-resource": "^1.0.3",
