Add vue-loader, switch vue-html-loader to html-loader

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-import": "^1.10.2",
     "exports-loader": "^0.6.3",
     "file-loader": "^0.9.0",
+    "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.22.0",
     "imports-loader": "^0.6.5",
     "node-sass": "^3.8.0",
@@ -56,7 +57,7 @@
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "vue-html-loader": "^1.2.3",
+    "vue-loader": "^10.0.2",
     "webpack": "^1.13.1",
     "webpack-cleanup-plugin": "^0.2.0",
     "webpack-dev-server": "^1.14.1",
