--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "port": 3000
   },
   "scripts": {
-    "start": "webpack-dev-server --config webpack/development.js --colors --history-api-fallback --inline --progress",
+    "start": "webpack-dashboard -c magenta -t 'Vue.js Starter Template' -- webpack-dev-server --config webpack/development.js --progress",
     "build": "webpack --config webpack/production.js -p --progress",
-    "lint:js": "./node_modules/.bin/eslint src; exit 0;"
+    "lint:js": "./node_modules/.bin/eslint src; exit 0;",
+    "validate:dev": "webpack-validator webpack/development.js",
+    "validate:prod": "webpack-validator webpack/production.js"
   },
   "dependencies": {
     "axios": "^0.15.3",
@@ -31,40 +33,51 @@
     "vue-router": "^2.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.7",
-    "babel-core": "^6.10.4",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-runtime": "^6.9.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-2": "^6.11.0",
-    "browser-sync": "^2.13.0",
-    "browser-sync-webpack-plugin": "^1.1.0",
-    "css-loader": "^0.23.1",
-    "eslint": "^3.0.1",
-    "eslint-friendly-formatter": "^2.0.5",
-    "eslint-loader": "^1.4.1",
-    "eslint-plugin-html": "^1.5.1",
-    "eslint-plugin-import": "^1.10.2",
+    "babel-core": "^6.18.2",
+    "babel-eslint": "^7.1.0",
+    "babel-loader": "^6.2.7",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-2": "^6.18.0",
+    "browser-sync": "^2.17.5",
+    "browser-sync-webpack-plugin": "^1.1.3",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.25.0",
+    "eslint": "^3.9.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-friendly-formatter": "^2.0.6",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-html": "^1.5.5",
+    "eslint-plugin-import": "^2.1.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.7.1",
     "exports-loader": "^0.6.3",
+    "extract-text-webpack-plugin": "^2.0.0-beta.5",
+    "favicons-webpack-plugin": "0.0.7",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.4",
-    "html-webpack-plugin": "^2.22.0",
+    "html-webpack-plugin": "^2.26.0",
+    "imagemin-mozjpeg": "^6.0.0",
+    "imagemin-webpack-plugin": "^1.2.1",
     "imports-loader": "^0.6.5",
-    "node-sass": "^3.8.0",
-    "postcss-loader": "^0.9.1",
-    "prerender-spa-plugin": "^1.1.0",
-    "require-dir": "^0.3.0",
-    "sass-loader": "^4.0.0",
+    "minimist": "^1.2.0",
+    "node-sass": "^3.11.1",
+    "optimize-css-assets-webpack-plugin": "^1.3.0",
+    "qs": "^6.3.0",
+    "require-dir": "^0.3.1",
+    "resolve-url-loader": "^1.6.0",
+    "sass-loader": "^4.0.2",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "vue-loader": "^10.0.2",
-    "vue-template-compiler": "^2.1.8",
-    "webpack": "^1.13.1",
-    "webpack-cleanup-plugin": "^0.2.0",
-    "webpack-dev-server": "^1.14.1",
+    "vue-loader": "^10.0.3",
+    "vue-template-compiler": "^2.1.10",
+    "webpack": "^2.2.0",
+    "webpack-cleanup-plugin": "^0.4.1",
+    "webpack-dashboard": "^0.2.1",
+    "webpack-dev-server": "^1.16.2",
     "webpack-merge": "^0.14.0",
-    "webpack-notifier": "^1.5.0"
+    "webpack-notifier": "^1.5.0",
+    "webpack-validator": "^2.2.9"
   }
 }
