--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "port": 3000
   },
   "scripts": {
-    "start": "webpack-dashboard -c magenta -t 'Vue.js Starter Template' -- webpack-dev-server --config webpack/development.js --progress",
+    "start": "webpack-dashboard -c magenta -t 'Vue.js-Starter-Template' -- webpack-dev-server --config webpack/development.js --progress",
     "build": "webpack --config webpack/production.js -p --progress",
     "lint:js": "./node_modules/.bin/eslint src; exit 0;",
     "validate:dev": "webpack-validator webpack/development.js",
