--- a/package.json
+++ b/package.json
@@ -77,5 +77,10 @@
     "webpack-dev-server": "^1.16.2",
     "webpack-merge": "^0.14.0",
     "webpack-notifier": "^1.5.0"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
