--- a/package.json
+++ b/package.json
@@ -19,21 +19,22 @@
     "port": 3000
   },
   "scripts": {
-    "start": "webpack-dashboard -c magenta -t 'Vue.js-Starter-Template' -- webpack-dev-server --config webpack/development.js --progress",
+    "start": "webpack-dashboard -c magenta -t 'Vue.js-Starter-Template' -- webpack-dev-server --config webpack/development.js --progress --hot",
     "build": "webpack --config webpack/production.js -p --progress",
     "lint:js": "eslint src"
   },
   "dependencies": {
     "axios": "^0.16.2",
     "bootstrap": "4.0.0-alpha.6",
+    "css-hot-loader": "^1.3.1",
     "font-awesome": "^4.7.0",
     "vee-validate": "^2.0.0-rc.5",
     "vue": "^2.3.4",
     "vue-router": "^2.5.3"
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.24.1",
@@ -41,40 +42,37 @@
     "browser-sync": "^2.18.12",
     "browser-sync-webpack-plugin": "^1.1.3",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.25.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.1",
-    "eslint-friendly-formatter": "^2.0.6",
+    "css-loader": "^0.28.7",
+    "eslint": "^4.7.2",
+    "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-html": "^1.5.5",
+    "eslint-plugin-html": "^3.2.2",
     "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-jsx-a11y": "^5.0.1",
-    "eslint-plugin-react": "^7.0.1",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
     "exports-loader": "^0.6.3",
-    "extract-text-webpack-plugin": "^2.1.2",
+    "extract-text-webpack-plugin": "^3.0.0",
     "favicons-webpack-plugin": "0.0.7",
-    "file-loader": "^0.9.0",
-    "html-loader": "^0.4.4",
+    "file-loader": "^0.11.2",
+    "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.26.0",
     "imagemin-mozjpeg": "^6.0.0",
     "imagemin-webpack-plugin": "^1.2.1",
-    "imports-loader": "^0.6.5",
+    "imports-loader": "^0.7.1",
     "minimist": "^1.2.0",
-    "node-sass": "^3.11.1",
+    "node-sass": "^4.5.3",
     "optimize-css-assets-webpack-plugin": "^1.3.2",
-    "qs": "^6.3.0",
     "require-dir": "^0.3.2",
-    "resolve-url-loader": "^1.6.0",
-    "sass-loader": "^4.0.2",
-    "source-map-loader": "^0.1.5",
-    "style-loader": "^0.13.1",
+    "resolve-url-loader": "^2.1.0",
+    "sass-loader": "^6.0.6",
+    "source-map-loader": "^0.2.1",
+    "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
-    "vue-loader": "^10.0.3",
+    "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.3.4",
-    "webpack": "^2.6.1",
-    "webpack-cleanup-plugin": "^0.4.1",
+    "webpack": "^3.6.0",
+    "webpack-cleanup-plugin": "^0.5.1",
     "webpack-dashboard": "^0.2.1",
-    "webpack-dev-server": "^1.16.5",
+    "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^0.14.0",
     "webpack-notifier": "^1.5.0"
   },
